Fix bug with overflow

--- a/styles/partials/_nullstyle.scss
+++ b/styles/partials/_nullstyle.scss
@@ -104,7 +104,6 @@ html {
 }
 
 .wrapper {
-	overflow-x: hidden;
 	position: relative;
 	height: 100%;
 
